[package]
name = "corona"
# Also increase the version in src/lib html root attribute
version = "0.3.1"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "Coroutine and Async/Await support for tokio-based futures"
documentation = "https://docs.rs/corona"
repository = "https://github.com/vorner/corona"
readme = "README.md"
keywords = ["coroutine", "future", "tokio", "await"]
categories = ["asynchronous"]
license = "Apache-2.0/MIT"

[badges]
travis-ci = { repository = "vorner/corona" }
appveyor = { repository = "vorner/corona" }
maintenance = { status = "actively-developed" }

[dependencies]
context = "~2"
futures = "~0.1"
tokio-core = "~0.1"

[dev-dependencies]
futures-await = "~0.1"
futures-cpupool = "~0.1"
bytes = "~0.4"
lazy_static = "~1"
tokio-io = "~0.1"
version-sync = "~0.5"
