[package]
name = "corona"
# Also increase the version in src/lib html root attribute
version = "0.4.0-pre.1"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "Coroutine and Async/Await support for tokio-based futures"
documentation = "https://docs.rs/corona"
repository = "https://github.com/vorner/corona"
readme = "README.md"
keywords = ["coroutine", "future", "tokio", "await"]
categories = ["asynchronous"]
license = "Apache-2.0/MIT"

[badges]
travis-ci = { repository = "vorner/corona" }
appveyor = { repository = "vorner/corona" }
maintenance = { status = "actively-developed" }

[workspace]
members = ["benchmarks"]

[features]
default = ["blocking-wrappers", "convenient-run"]
blocking-wrappers = ["tokio-io"]
convenient-run = ["tokio"]

[dependencies]
context = ">=2.1"
futures = "~0.1"
tokio = { version = "~0.1", optional = true }
tokio-current-thread = "~0.1"
tokio-core = "~0.1"
tokio-io = { version = "~0.1", optional = true }

[[test]]
name = "integration_tests"
path = "test/tests.rs"

[dev-dependencies]
bytes = "~0.4"
tokio = "~0.1"
tokio-io = "~0.1"
version-sync = "~0.5"
